[gd_scene load_steps=2 format=3 uid="uid://cbvw61khca1xu"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_be0jy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_be0jy")

[node name="LoadCharacterWindow" type="Window" parent="."]
title = "Load Character"
initial_position = 1
size = Vector2i(10, 400)
visible = false
always_on_top = true

[node name="LoadCharacterScrollContainer" type="ScrollContainer" parent="LoadCharacterWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="LoadCharacterWindow/LoadCharacterScrollContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="AspectRatioContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Eric's Character Creator"
horizontal_alignment = 1

[node name="LoadCharacterButton" type="Button" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Character"

[node name="NewCharacterButton" type="Button" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New Character"

[node name="QuitButton" type="Button" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="AspectRatioContainer/CenterContainer/VBoxContainer/LoadCharacterButton" to="." method="_on_load_character_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer/CenterContainer/VBoxContainer/NewCharacterButton" to="." method="_on_new_character_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
